--- a/1_react_basics/package.json
+++ b/1_react_basics/package.json
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
+    "msw": "^1.0.0",
     "prettier": "^2.8.3"
   }
 }
